--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,15 @@
+version: '3.9'
 services:
     dockerlm:
-        image: dockerlm:test
+        image: 'dockerlm:latest'
+        tty: true
+        stdin_open: true
         container_name: dockerlm
-        network_mode: bridge
-        hostname: "gaia"
-        mac_address: "00:14:4F:8D:24:CC"
-        user: root
-        restart: unless-stopped
         ports:
-            - "1700:1700" #LMGRD Port
-            - "1701:1701" #VENDOR Port
+            - '1700:1700'
+        mac_address: '00:14:4f:8d:24:cc'
+        hostname: gaia
+        volumes:
+            - '.\license.dat:/opt/license.dat' #WIN PATH
+#            - './license.dat:/opt/license.dat' #UNIX PATH
+        user: root
